[project]
name = "kademlia"
dynamic = ["version"]
description = "Kademlia is a distributed hash table for decentralized peer-to-peer computer networks."
readme = "README.md"
authors = [
    { name = "Brian Muller", email = "bamuller@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "rpcudp>=5.0.1",
]

[project.urls]
Homepage = "https://github.com/bmuller/kademlia"
Issues = "https://github.com/bmuller/kademlia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kademlia"]

[tool.hatch.version]
path = "kademlia/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
